z-index fixed

--- a/css/style2.css
+++ b/css/style2.css
@@ -480,7 +480,7 @@ body{
 	#navigation{
 /*		position: absolute;
 		bottom: 0;*/
-		z-index: 100;
+		z-index: 1;
 	}
 
 
